<resources>
    <string name="app_name">MyProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register?</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_name">Enter name</string>
    <string name="title">Title</string>
    <string name="select">Select</string>
</resources>